--- a/Task1_TITANIC_DATASET.ipynb
+++ b/Task1_TITANIC_DATASET.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Harini017/CodeSoft/blob/main/Task1_TITANIC_DATASET.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -50,7 +61,7 @@
       "metadata": {
         "id": "znNPU0Xlz8IW"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +79,7 @@
         "id": "EslB0jUSY2gj",
         "outputId": "0a389b63-4ebc-412c-fd85-e41ea85c1af6"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -446,7 +457,7 @@
         "id": "Z-MWKRlYZMji",
         "outputId": "7565df48-cc4f-4a68-b371-f94c651caba3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +483,7 @@
         "id": "Ry88AknkZuht",
         "outputId": "b586ac6d-4968-4eeb-f8db-1f5da744bd4f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -511,7 +522,7 @@
         "id": "iZ24slTtZyT_",
         "outputId": "e5e27ec4-6808-4e0c-b64e-51a255b7d7ff"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +566,7 @@
         "id": "FvTW5zOvaYJb",
         "outputId": "8da9fae8-1e1e-4188-aa7c-826653aa22b8"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,7 +907,7 @@
         "id": "h9WdHxofbYEH",
         "outputId": "a5c51e8a-9981-4140-cdcf-bd5b0040c9b1"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -934,7 +945,7 @@
       "metadata": {
         "id": "bP3jCrbZcm3P"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -951,7 +962,7 @@
         "id": "8uwlOIVKeSx1",
         "outputId": "fc4241df-eda8-476d-cc19-04795517469e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -979,7 +990,7 @@
         "id": "4cY4TDm5k7Dc",
         "outputId": "c7cc590b-cfab-4b67-c93f-15fa2f155065"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1006,7 +1017,7 @@
         "id": "oEnkpmORlMyK",
         "outputId": "5022c5c3-acf5-4427-b625-f24318ac3077"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1032,7 +1043,7 @@
       "metadata": {
         "id": "8UvWySc3la6D"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1048,7 +1059,7 @@
         "id": "Y58YuX8QmMB9",
         "outputId": "c7eead78-6da8-4109-d148-fd776edfe5f1"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1075,7 +1086,7 @@
         "id": "hD5q4VBBmeko",
         "outputId": "e09c7c47-bc97-4cc3-a62e-8871fedd4a46"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1104,7 +1115,7 @@
       "metadata": {
         "id": "q9a1AG40mld9"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1120,7 +1131,7 @@
         "id": "20Q2TIA6oR8x",
         "outputId": "509af28f-b2aa-4387-b210-52574b9db8c4"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1147,7 +1158,7 @@
         "id": "pwGrRqiaoZzj",
         "outputId": "fe467dcb-60ed-4696-9078-347c88192d24"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1179,7 +1190,7 @@
         "id": "AxCimBxfomRC",
         "outputId": "13a524e3-745e-45c2-8c02-c317ed670ea1"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1226,7 +1237,7 @@
         "id": "BauKFptMpuiQ",
         "outputId": "ac0673e5-135b-434f-af1e-c75cff898f18"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1559,7 +1570,7 @@
       "metadata": {
         "id": "s_3KFHcLqM5t"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1570,7 +1581,7 @@
       "metadata": {
         "id": "H7jQy2dXqbF8"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1585,7 +1596,7 @@
         "id": "2BlPLXaJrC8G",
         "outputId": "d621c506-bc3f-4ff1-c2dc-f5761c57a03f"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1629,7 +1640,7 @@
         "id": "QGymb6S8rZd1",
         "outputId": "1f9f0f0a-abe4-412b-8c8d-339644658d8f"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2102,7 +2113,7 @@
         "id": "pGWvJr4CsgKF",
         "outputId": "10eca365-63d3-4dc3-c3d3-5dc8b927dd3e"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2127,7 +2138,7 @@
       "metadata": {
         "id": "FjWblD_5sqO4"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2148,7 +2159,7 @@
         "id": "wAXJ2zwYtCIr",
         "outputId": "fb584ebd-5769-4e7e-e5f6-0879291039de"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2202,7 +2213,7 @@
         "id": "6oz66SjG2q-B",
         "outputId": "e97cb4ec-b841-4150-fb8b-5ddb29f464e0"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2283,7 +2294,7 @@
         "id": "rGLrYOIp6hkX",
         "outputId": "6bdd328e-63e0-4dc9-964e-60fe33903633"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2315,7 +2326,7 @@
         "id": "RNQyx1_x7VNf",
         "outputId": "799f3f8e-6cf5-4447-c160-569dd8117a56"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2352,7 +2363,7 @@
         "id": "YKAjaET-7mZJ",
         "outputId": "38f83264-34ad-4ee6-f38a-3140a95e95b0"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2386,7 +2397,7 @@
       "metadata": {
         "id": "3fOoGz018T7E"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
