--- a/Task3_IRIS_FLOWER_CLASSIFICATION.ipynb
+++ b/Task3_IRIS_FLOWER_CLASSIFICATION.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Harini017/CodeSoft/blob/main/Task3_IRIS_FLOWER_CLASSIFICATION.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -45,7 +56,7 @@
       "metadata": {
         "id": "v2Ssi-XM5u5-"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +74,7 @@
         "id": "043we_UA7G9f",
         "outputId": "a8215629-864c-4ea9-d896-d8de14bdfb16"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +419,7 @@
         },
         "outputId": "55f39c12-f1aa-4ba2-9785-9629378676d9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -739,7 +750,7 @@
         "id": "Pmg-nIHOf-Ag",
         "outputId": "c9da6887-ad63-46ea-d069-07e61c68e2fd"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,7 +784,7 @@
         "id": "QE5S3PoIgBH9",
         "outputId": "1fd50010-e775-489f-fcc7-2455576c01fd"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -802,7 +813,7 @@
         "id": "pK-DsaAJgRH7",
         "outputId": "7744691f-6b2e-406b-f142-d5ceb30a6a0b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -843,7 +854,7 @@
         "id": "S03H4E-agVxI",
         "outputId": "e9e2cceb-d000-4862-a272-b9317bf1b4ed"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -880,7 +891,7 @@
         "id": "foGT1FJ6gb9H",
         "outputId": "70ba174d-efcb-4718-8b9c-491c773884e2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -917,7 +928,7 @@
         "id": "c8zO3aUJglNW",
         "outputId": "21af7e0a-064d-4f43-df2e-b78fab7b7f88"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -950,7 +961,7 @@
       "metadata": {
         "id": "ZgVLBBpfgx52"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -971,7 +982,7 @@
         "id": "VXhhmt2ahIBv",
         "outputId": "48a27c0c-41e4-41be-8661-33fc4282866d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1013,7 +1024,7 @@
         "id": "0-4p7EhEh2DR",
         "outputId": "25400d63-a610-4969-9b2a-6894176d5c01"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1055,7 +1066,7 @@
         "id": "8AiLFbxyiXKR",
         "outputId": "13ed8d94-6fdc-482b-cd25-b365716fca34"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1087,7 +1098,7 @@
         "id": "zDXmdnqdi2FW",
         "outputId": "cee62a73-d002-42a3-d0a7-177299c3fc87"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1124,7 +1135,7 @@
         "id": "szOfyJaPjZTB",
         "outputId": "c1cffa06-8101-47b9-8773-e79bde807c25"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1443,7 +1454,7 @@
         "id": "PD5vuPtSjdBp",
         "outputId": "0676e35b-f9b6-4e4d-f91a-e1720a7c1f11"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1493,7 +1504,7 @@
       "metadata": {
         "id": "GAFBLeCAj0T9"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1510,7 +1521,7 @@
         "id": "kpp218_nlbCB",
         "outputId": "97613ec8-ac64-46c4-8810-531d0400fa1a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1840,7 +1851,7 @@
       "metadata": {
         "id": "eDsaZuRulmxK"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1852,7 +1863,7 @@
       "metadata": {
         "id": "gwVj5mh2mV5a"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1868,7 +1879,7 @@
         "id": "EPFITmBQmgfo",
         "outputId": "a9f38794-9d56-4143-96da-5f4329efd88f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1912,7 +1923,7 @@
         "id": "H7nNEOEXmsHX",
         "outputId": "aa208e63-3dfd-4793-c4e5-4d983ba9a13f"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1941,7 +1952,7 @@
         "id": "sGYHHlYjnuCV",
         "outputId": "cc45408b-45ac-421f-a9a8-5ed365ad647e"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1961,7 +1972,7 @@
       "metadata": {
         "id": "jYkKzy4Vn5uq"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1977,7 +1988,7 @@
         "id": "yeqkDVohoHFZ",
         "outputId": "44861b76-cc77-4e25-c0b3-1ae2f818c9f4"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2006,7 +2017,7 @@
         "id": "o5INYGPLoLni",
         "outputId": "16946685-5a92-4263-82ac-e94d834b2371"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2026,7 +2037,7 @@
       "metadata": {
         "id": "Idrn57FqoWHU"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2042,7 +2053,7 @@
         "id": "LmMELBxsof67",
         "outputId": "9b3edc71-8bda-46d9-a99f-740bc21d7dd1"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2071,7 +2082,7 @@
         "id": "2QuDL_SOokjr",
         "outputId": "a67c4ac0-ffb8-4a9c-e1b5-1f686855dedd"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
