--- a/Task4_SALES_PREDICTION.ipynb
+++ b/Task4_SALES_PREDICTION.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +16,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Harini017/CodeSoft/blob/main/Task4_SALES_PREDICTION.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "wKmGuNrdBUkL"
       },
@@ -56,7 +67,7 @@
         "id": "2ksynMqBCi2Q",
         "outputId": "de6a4e34-2d35-45db-8267-615de17dd709"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +375,7 @@
         "id": "FxzlV1poCyk9",
         "outputId": "bbd597ad-fc81-4a32-cbd4-a9bfb7128676"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,7 +399,7 @@
         "id": "h1RAwrmlDDTR",
         "outputId": "1f592412-47e7-4b00-ddb8-ec24909aeab2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -420,7 +431,7 @@
         "id": "LQFPQMlcDJ6t",
         "outputId": "8d1a2e3b-7e1a-402d-9c1c-91cb65e7b0a9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,7 +471,7 @@
         "id": "AdFrSj7VDYfC",
         "outputId": "48760f5c-0ac9-4d4f-9c90-d35af867b7e0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +513,7 @@
       "metadata": {
         "id": "xGMzHTykD_Rg"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -521,7 +532,7 @@
         "id": "c5kienYNETdw",
         "outputId": "4c429317-e4c2-4705-95d9-3c9ef3a7bfe2"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +566,7 @@
         "id": "9_iZwMhxFRak",
         "outputId": "f256bed8-ee67-4d19-beca-edb3b6997d06"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -589,7 +600,7 @@
         "id": "cBraHI92GE9z",
         "outputId": "0f995f41-6735-4d97-fb41-59f327277b7c"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,7 +620,7 @@
       "metadata": {
         "id": "2hciqAvDGmF7"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     }
   ]
